@@ -48,6 +48,7 @@
 - duplicate parent options for included maps.
 - fix kernel verion check of version components.
 - move timeout to map_source (allow per direct map timeout).
+- dont retry ldap connect if not required.
 
 28/06/2011 autofs-5.0.6
 -----------------------
